--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,6 @@
     </div>
   </main>
 
-  <!-- Footer -->
   <footer class="modern-footer">
     <div class="footer-top">
       <div class="footer-content">
@@ -176,52 +175,50 @@
             <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
             <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
             <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+            <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
 
-        <div class="footer-section links-section">
-          <h4>Quick Links</h4>
-          <ul class="footer-links">
+        <div class="footer-links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="how-it-works.html">How It Works</a></li>
+            <li><a href="report-emergency.html">Report Emergency</a></li>
             <li><a href="faqs.html">FAQs</a></li>
-            <li><a href="contact.html">Contact Support</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
 
-        <div class="footer-section contact-section">
-          <h4>Contact Info</h4>
-          <div class="contact-info">
-            <div class="contact-item">
-              <i class="fas fa-map-marker-alt"></i>
-              <span>123 Main Street, Cityville</span>
-            </div>
-            <div class="contact-item">
-              <i class="fas fa-envelope"></i>
-              <span>support@emergencyservices.com</span>
-            </div>
-            <div class="contact-item">
-              <i class="fas fa-phone"></i>
-              <span>+1 234 567 890</span>
-            </div>
+        <div class="contact-info">
+          <h3>Contact Info</h3>
+          <div class="contact-item">
+            <i class="fas fa-phone"></i>
+            <span>Emergency: 911</span>
+          </div>
+          <div class="contact-item">
+            <i class="fas fa-envelope"></i>
+            <span>info@emergency.com</span>
+          </div>
+          <div class="contact-item">
+            <i class="fas fa-map-marker-alt"></i>
+            <span>123 Emergency St, City</span>
           </div>
         </div>
 
-        <div class="footer-section newsletter-section">
-          <h4>Stay Updated</h4>
+        <div class="newsletter-section">
+          <h3>Newsletter</h3>
           <p>Subscribe to our newsletter for updates and safety tips.</p>
           <form class="newsletter-form">
             <div class="form-group">
-              <input type="email" placeholder="Enter your email" class="newsletter-input">
+              <input type="email" class="newsletter-input" placeholder="Enter your email">
               <button type="submit" class="newsletter-btn">Subscribe</button>
             </div>
           </form>
         </div>
       </div>
     </div>
-
+    
     <div class="footer-bottom">
       <div class="footer-content">
         <p class="copyright">&copy; 2024 UPF-emSERVICE. All rights reserved.</p>
