--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
   <!-- Main Section -->
   <main class="contact-main">
     <!-- Contact Hero Section -->
-    <section class="contact-hero">
+    <section class="contact-hero" style="background-image: url('images/police\ car.webp');">
       <div class="hero-content">
         <h2>Contact Support</h2>
         <p>We're here to help with any questions or concerns about our emergency response platform</p>
