--- a/faqs.html
+++ b/faqs.html
@@ -41,9 +41,12 @@
 
   <!-- Main Section -->
   <main class="faq-main">
-    <section class="faq-hero">
-      <h2>Frequently Asked Questions</h2>
-      <p>Find answers to common questions about our emergency response platform</p>
+    <!-- FAQ Hero Section -->
+    <section class="faq-hero" style="background-image: url('images/');">
+      <div class="hero-content">
+        <h2>Frequently Asked Questions</h2>
+        <p>Find answers to common questions about our emergency response platform</p>
+      </div>
     </section>
 
     <section class="faq-container">
