--- a/how-it-works.html
+++ b/how-it-works.html
@@ -41,9 +41,12 @@
 
   <!-- Main Section -->
   <main class="hiw-main">
-    <section class="hiw-hero">
-      <h2>How It Works</h2>
-      <p>Learn how our emergency response platform helps save lives</p>
+    <!-- How It Works Hero Section -->
+    <section class="hiw-hero" style="background-image: url('images/');">
+      <div class="hero-content">
+        <h2>How It Works</h2>
+        <p>Learn how our emergency response platform helps connect citizens with law enforcement quickly and efficiently</p>
+      </div>
     </section>
 
     <section class="hiw-container">
