--- a/auth.html
+++ b/auth.html
@@ -105,6 +105,6 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="js/auth.js"></script>
+    <script src="public/js/auth.js"></script>
 </body>
 </html> 
