--- a/how-it-works.html
+++ b/how-it-works.html
@@ -29,7 +29,7 @@
         <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
       </div>
       <div class="auth-buttons">
-        <a href="auth.html" class="signup-btn">Sign Up</a>
+        <a href="auth.html" class="signup-btn">Log In</a>
       </div>
       <div class="hamburger" id="hamburger">
         <div class="bar"></div>
