--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
             <h3>24/7 Support</h3>
             <p>Our support team is available round the clock</p>
             <div class="contact-details">
-              <p><i class="fas fa-phone"></i> +1 234 567 890</p>
+              <p><i class="fas fa-phone"></i> +256 0389005678</p>
               <p><i class="fas fa-envelope"></i> support@emergencyservices.com</p>
             </div>
           </div>
@@ -72,8 +72,8 @@
             <h3>Main Office</h3>
             <p>Visit our headquarters</p>
             <div class="contact-details">
-              <p><i class="fas fa-location-dot"></i> 123 Main Street</p>
-              <p>Cityville, State 12345</p>
+              <p><i class="fas fa-location-dot"></i> Naguru-Kampala</p>
+              <p>Kampala 12345</p>
             </div>
           </div>
 
