--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <div class="contact-info">
             <div class="contact-item">
               <i class="fas fa-map-marker-alt"></i>
-              <span>123 Main Street, Cityville</span>
+              <span>Naguru, Kampala Uganda</span>
             </div>
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
@@ -280,7 +280,7 @@
             </div>
             <div class="contact-item">
               <i class="fas fa-phone"></i>
-              <span>+1 234 567 890</span>
+              <span>+256 380099654</span>
             </div>
           </div>
         </div>
