--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
           </div>
           <div class="contact-item">
             <i class="fas fa-map-marker-alt"></i>
-            <span>123 Emergency St, City</span>
+            <span>Naguru, kampala</span>
           </div>
         </div>
 
@@ -221,7 +221,7 @@
     
     <div class="footer-bottom">
       <div class="footer-content">
-        <p class="copyright">&copy; 2024 UPF-emSERVICE. All rights reserved.</p>
+        <p class="copyright">&copy; 2025 UPF-emSERVICE. All rights reserved.</p>
         <div class="footer-bottom-links">
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Use</a>
