--- a/how-it-works.html
+++ b/how-it-works.html
@@ -236,7 +236,7 @@
             </div>
             <div class="contact-item">
               <i class="fas fa-phone"></i>
-              <span>+1 234 567 890</span>
+              <span>+256 380099654</span>
             </div>
           </div>
         </div>
@@ -256,7 +256,7 @@
 
     <div class="footer-bottom">
       <div class="footer-content">
-        <p class="copyright">&copy; 2024 UPF-emSERVICE. All rights reserved.</p>
+        <p class="copyright">&copy; 2025 UPF-emSERVICE. All rights reserved.</p>
         <div class="footer-bottom-links">
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Use</a>
