--- a/report-emergency.html
+++ b/report-emergency.html
@@ -203,7 +203,7 @@
           <div class="contact-info">
             <div class="contact-item">
               <i class="fas fa-map-marker-alt"></i>
-              <span>123 Main Street, Cityville</span>
+              <span>Naguru, Kampala</span>
             </div>
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
@@ -211,7 +211,7 @@
             </div>
             <div class="contact-item">
               <i class="fas fa-phone"></i>
-              <span>+1 234 567 890</span>
+              <span>+256 380099654</span>
             </div>
           </div>
         </div>
@@ -231,7 +231,7 @@
 
     <div class="footer-bottom">
       <div class="footer-content">
-        <p class="copyright">&copy; 2024 UPF-emSERVICE. All rights reserved.</p>
+        <p class="copyright">&copy; 2025 UPF-emSERVICE. All rights reserved.</p>
         <div class="footer-bottom-links">
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Use</a>
