--- a/faqs.html
+++ b/faqs.html
@@ -184,7 +184,7 @@
           <div class="contact-info">
             <div class="contact-item">
               <i class="fas fa-map-marker-alt"></i>
-              <span>123 Main Street, Cityville</span>
+              <span>Naguru, kampala</span>
             </div>
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
