--- a/how-it-works.html
+++ b/how-it-works.html
@@ -228,7 +228,7 @@
           <div class="contact-info">
             <div class="contact-item">
               <i class="fas fa-map-marker-alt"></i>
-              <span>123 Main Street, Cityville</span>
+              <span>Naguru, Kampala</span>
             </div>
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
